rhi: d3d11: Fix not setting activeAdapter when importing

This was added as part of other work in 6.9. Create a dedicated
backport for 6.8.

Fixes: QTBUG-135112
Change-Id: I5eeb9b2ce2210116fa2a445fdaab7c5cab2d5328
Reviewed-by: Andy Nichols <andy.nichols@qt.io>